manifest/faros-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: faros
spec:
  ports:
    - protocol: TCP
      name: faros
      port: 6443
      targetPort: 6443
    - protocol: TCP
      name: virtual-workspaces
      port: 6444
      targetPort: 6444
  selector:
    app: faros
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faros
  labels:
    app: faros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faros
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: faros
    spec:
      containers:
      - name: faros
        image: faros:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 6443
        args:
        - start
        # - --all-in-one
        - --root-directory=/etc/faros/config
        - --etcd-servers=https://etcd:2379
        - --etcd-keyfile=/etc/etcd/tls/server/tls.key
        - --etcd-certfile=/etc/etcd/tls/server/tls.crt
        - --etcd-cafile=/etc/etcd/tls/server/ca.crt
        - --shard-name=shard-0
        - --root-shard-kubeconfig-file=/etc/faros/config/admin.kubeconfig
        - --client-ca-file=/etc/faros/tls/client-ca/ca.crt
        - --requestheader-client-ca-file=/etc/faros/tls/requestheader-client/ca.crt
        - --requestheader-username-headers=X-Remote-User
        - --requestheader-group-headers=X-Remote-Group
        - --service-account-key-file=/etc/faros/tls/service-account/tls.crt
        - --service-account-private-key-file=/etc/faros/tls/service-account/tls.key
        - --tls-private-key-file=/etc/faros/tls/server/tls.key
        - --tls-cert-file=/etc/faros/tls/server/tls.crt
        - --external-hostname=$(EXTERNAL_HOSTNAME):443
        - --oidc-issuer-url=https://faroshq-dev.eu.auth0.com/
        - --oidc-client-id=okmB9NaTdFkmBLI9hHRrbnTrCk4wJgTi
        - --oidc-groups-claim=org_id
        - --oidc-username-claim=preferred_username
        - --oidc-username-prefix=faros-sso
        - --oidc-groups-prefix=faros-sso
        - --run-virtual-workspaces=false
        - --shard-virtual-workspace-url=https://$(EXTERNAL_HOSTNAME):6444
        - --v=2
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: livez
            port: 6443
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: readyz
            port: 6443
            scheme: HTTPS
        resources:
          limits:
            cpu: '2'
            memory: 2Gi
          requests:
            cpu: '1'
            memory: 1Gi
        volumeMounts:
        # Etcd certs
        - name: etcd-certs
          mountPath: /etc/etcd/tls/server
        # CA for client certs
        - name: client-ca
          mountPath: /etc/faros/tls/client-ca/
        # RequestHeader CA
        - name: requestheader-client-ca
          mountPath: /etc/faros/tls/requestheader-client/
        # Service account signing key
        - name: service-accounts-ca
          mountPath: /etc/faros/tls/service-account/
        # serving certs for shard
        - name: shard-serving-cert
          mountPath: /etc/faros/tls/server
        - name: kubeconfig
          mountPath: /etc/faros/config
      - name: vw
        image: ghcr.io/kcp-dev/kcp:latest
        ports:
        - containerPort: 6444
        command:
        - /virtual-workspaces
        args:
          - --kubeconfig=/etc/faros/config/admin.kubeconfig
          - --context=system:admin
          - --authentication-skip-lookup
          - --client-ca-file=/etc/faros/tls/client-ca/ca.crt
          - --tls-private-key-file=/etc/faros/tls/server/tls.key
          - --tls-cert-file=/etc/faros/tls/server/tls.crt
          - --requestheader-client-ca-file=/etc/faros/tls/requestheader-client/ca.crt
          - --requestheader-username-headers=X-Remote-User
          - --requestheader-group-headers=X-Remote-Group
          - --secure-port=6444
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: livez
            port: 6444
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: readyz
            port: 6444
            scheme: HTTPS
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: client-ca
          mountPath: /etc/faros/tls/client-ca/
        - name: virtual-workspaces-certs
          mountPath: /etc/faros/tls/server
        - name: requestheader-client-ca
          mountPath: /etc/faros/tls/requestheader-client
        - name: kubeconfig
          mountPath: /etc/faros/config
      volumes:
      - name: etcd-certs
        secret:
          secretName: etcd-cert
      - name: client-ca
        secret:
          secretName: client-ca
      - name: requestheader-client-ca
        secret:
          secretName: requestheader-client-ca
          items:
          - key: ca.crt
            path: ca.crt
      - name: service-accounts-ca
        secret:
          secretName: service-accounts-ca
      - name: shard-serving-cert
        secret:
          secretName: shard-serving-cert
      - name: virtual-workspaces-certs
        secret:
          secretName: virtual-workspaces-cert
      - name: kubeconfig
        persistentVolumeClaim:
          claimName: faros
