manifest/faros.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: faros
spec:
  ports:
    - protocol: TCP
      name: faros
      port: 6443
      targetPort: 6443
    - protocol: TCP
      name: virtual-workspaces
      port: 6444
      targetPort: 6444
  selector:
    app: faros
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faros
  labels:
    app: faros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faros
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: faros
    spec:
      containers:
      - name: faros
        image: faros:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 6443
        args:
        - start
        - --all-in-one
        - --etcd-servers=https://etcd:2379
        - --etcd-keyfile=/etc/etcd/tls/server/tls.key
        - --etcd-certfile=/etc/etcd/tls/server/tls.crt
        - --etcd-cafile=/etc/etcd/tls/server/ca.crt
        - --tls-private-key-file=/etc/faros/tls/server/tls.key
        - --tls-cert-file=/etc/faros/tls/server/tls.crt
        - --requestheader-client-ca-file=/etc/faros/tls/requestheader-client/ca.crt
        - --requestheader-username-headers=X-Remote-User
        - --requestheader-group-headers=X-Remote-Group
        - --root-directory=/etc/faros/config
        - --external-hostname=$(EXTERNAL_HOSTNAME):443
        - --oidc-issuer-url=https://faroshq-dev.eu.auth0.com
        - --oidc-client-id=okmB9NaTdFkmBLI9hHRrbnTrCk4wJgTi
        - --oidc-groups-claim=org_id
        - --oidc-username-claim=preferred_username
        - "--oidc-username-prefix=faros-sso:"
        - "--oidc-groups-prefix=faros-sso:"
        - --v=2
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: livez
            port: 6443
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: readyz
            port: 6443
            scheme: HTTPS
        resources:
          limits:
            cpu: '2'
            memory: 2Gi
          requests:
            cpu: '1'
            memory: 1Gi
        volumeMounts:
        - name: etcd-certs
          mountPath: /etc/etcd/tls/server
        - name: faros-certs
          mountPath: /etc/faros/tls/server
        - name: faros-requestheader-client-ca
          mountPath: /etc/faros/tls/requestheader-client
        - name: kubeconfig
          mountPath: /etc/faros/config
      volumes:
      - name: etcd-certs
        secret:
          secretName: etcd-cert
      - name: faros-certs
        secret:
          secretName: faros-cert
      - name: faros-requestheader-client-ca
        secret:
          secretName: faros-requestheader-client-ca
          items:
          - key: ca.crt
            path: ca.crt
      - name: kubeconfig
        persistentVolumeClaim:
          claimName: faros
