manifest/faros-front-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-proxy-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: local.dev.faros.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faros-front-proxy
            port:
              number: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: faros-front-proxy
spec:
  ports:
    - protocol: TCP
      name: faros-front-proxy
      port: 8443
      targetPort: 8443
  selector:
    app: faros-front-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faros-front-proxy
  labels:
    app: faros-front-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faros-front-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: faros-front-proxy
    spec:
      containers:
      - name: faros-front-proxy
        image: ghcr.io/kcp-dev/kcp:latest
        ports:
        - containerPort: 8443
        command:
        - /kcp-front-proxy
        args:
        - --secure-port=8443
        - --tls-private-key-file=/etc/faros-front-proxy/tls/tls.key
        - --tls-cert-file=/etc/faros-front-proxy/tls/tls.crt
        - --client-ca-file=/etc/faros-front-proxy/client/tls/ca.crt
        - --mapping-file=/etc/faros-front-proxy/config/path-mapping.yaml
        - --v=6
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: livez
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: readyz
            port: 8443
            scheme: HTTPS
        volumeMounts:
        - name: faros-front-proxy-cert
          mountPath: /etc/faros-front-proxy/tls
        - name: faros-front-proxy-config
          mountPath: /etc/faros-front-proxy/config
        - name: faros-client-ca
          mountPath: /etc/faros-front-proxy/client/tls
        - name: faros-ca
          mountPath: /etc/faros/tls
        - name: faros-front-proxy-faros-client-cert
          mountPath: /etc/faros-front-proxy/requestheader-client/tls/faros
      volumes:
      - name: faros-front-proxy-cert
        secret:
          secretName: faros-front-proxy-cert
      - name: faros-client-ca
        secret:
          secretName: faros-client-ca
          items:
            - key: ca.crt
              path: ca.crt
      - name: faros-ca
        secret:
          secretName: faros-cert
          items:
            - key: ca.crt
              path: ca.crt
      - name: faros-front-proxy-faros-client-cert
        secret:
          secretName: faros-front-proxy-faros-client-cert
          items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
      - name: faros-front-proxy-config
        configMap:
          name: faros-front-proxy-config
          items:
            - key: "path-mapping.yaml"
              path: "path-mapping.yaml"
